--- a/02-ansible/05-wordpress/provisionar.yml
+++ b/02-ansible/05-wordpress/provisionar.yml
@@ -15,9 +15,9 @@
         state: latest
       become: yes # roda com sudo
       with_items:
-        - php7.2
+        - php7.4
         - apache2
-        - libapache2-mod-php7.2
+        - libapache2-mod-php7.4
         - php-mysql
         - php-curl
         - mysql-server
@@ -69,24 +69,24 @@
         name: mysql
         state: started
 
-    # - name: "Criando senha root mysql"
-    #   become: yes
-    #   mysql_user:
-    #     name: root
-    #     host: localhost
-    #     password: root
-    #     priv: "*.*:ALL,GRANT"
+    - name: "Criando senha root mysql"
+      become: yes
+      mysql_user:
+        name: root
+        host: localhost
+        password: root
+        priv: "*.*:ALL,GRANT"
   
-    # - name: "Cria o banco de dados MySQL"
-    #   mysql_db:
-    #     name: banco_wordpress
-    #     login_user: root
-    #     login_password: root
-    #     state: present
+    - name: "Cria o banco de dados MySQL"
+      mysql_db:
+        name: banco_wordpress
+        login_user: root
+        login_password: root
+        state: present
 
     - name: "Copiando novo tema WP"
       copy:
-        src: "thema/generatepress.3.0.3.zip"
+        src: "theme/generatepress.3.0.3.zip"
         dest: "/tmp/generatepress.3.0.3.zip"
       become: yes
 
