--- a/02-ansible/05-wordpress/provisionar.yml
+++ b/02-ansible/05-wordpress/provisionar.yml
@@ -69,30 +69,30 @@
         name: mysql
         state: started
 
-    - name: "Criando senha root mysql"
-      become: yes
-      mysql_user:
-        name: root
-        host: localhost
-        password: root
-        priv: "*.*:ALL,GRANT"
-  
-    - name: "Cria o banco de dados MySQL"
-      mysql_db:
-        name: banco_wordpress
-        login_user: root
-        login_password: root
-        state: present
+    #- name: "Criando senha root mysql"
+    #  become: yes
+    #  mysql_user:
+    #    name: root
+    #    host: localhost
+    #    password: root
+    #    priv: "*.*:ALL,GRANT"
+    #
+    #- name: "Cria o banco de dados MySQL"
+    #  mysql_db:
+    #    name: banco_wordpress
+    #    login_user: root
+    #    login_password: root
+    #    state: present
 
     - name: "Copiando novo tema WP"
       copy:
-        src: "theme/generatepress.3.0.3.zip"
-        dest: "/tmp/generatepress.3.0.3.zip"
+        src: "theme/sydney.1.85.zip"
+        dest: "/tmp/sydney.1.85.zip"
       become: yes
 
     - name: "Descompactar na pasta do thema"
       unarchive:
-        src: "/tmp/generatepress.3.0.3.zip"
+        src: "/tmp/sydney.1.85.zip"
         dest: "/var/www/wordpress/wp-content/themes/"
         remote_src: yes
       become: yes
