--- a/07-kubernetes/15-mysql-java-ansible/k8s-deploy/7.3-deployment.yml
+++ b/07-kubernetes/15-mysql-java-ansible/k8s-deploy/7.3-deployment.yml
@@ -43,5 +43,5 @@ spec:
       app: pod-javadb
 
 
-# $ kubectl logs -l app=lable-pod-java # log de todos os lables do replicaset
+# $ kubectl logs -l app=pod-javadb # log de todos os lables do replicaset
 # $ kubectl logs --tail=20 --follow=true -l app=lable-pod-java
